2004-05-19  Angus Leeming  <leeming@lyx.org>

	* Most files: wrap code up inside namespace lyx::frontend.

2004-05-04  Angus Leeming  <leeming@lyx.org>

	* Dialogs.C: Remove "error" dialog identifier.

2004-04-28  Angus Leeming  <leeming@lyx.org>

	* GToolbar.[Ch]: rewrite code to derive from a single Toolbar or
	LayoutBox.

	* GView.C: small changes due to changed Toolbar API.

2004-04-28  Angus Leeming  <leeming@lyx.org>

	* WorkAreaFactory.C (create): No longer passed x, y data.

	* GView.[Ch] (c-tor): no longer passes x, y data to BufferView c-tor.

2004-04-28  Angus Leeming  <leeming@lyx.org>

	* WorkAreaFactory.C (create): pass a LyXView & to GWorkArea c-tor.

	* GWorkArea.[Ch] (c-tor): now receives a LyXView &. Use it instead
	of GView::instance.

	* GView.[Ch] (instance): removed.

2004-04-27  Angus Leeming  <leeming@lyx.org>

	* GView.[Ch]: split the window into 'top', 'left', 'center',
	'right' and 'bottom' boxes.
	(getBox): accessor for a particular box.

	* GMenubar.C (c-tor):
	* GMiniBuffer.C (c-tor):
	* GWorkArea.C (c-tor):
	* GToolbar.C (add): access the correct Box in GView.

	* GToolbar.[Ch] (add, displayToolbar): show only those toolbars that
	are flagged as 'ON'.

2004-04-27  Angus Leeming  <leeming@lyx.org>

	* ghelpers.[Ch]: new files.
	(findGladeFile): search the top_srcdir() as welll as LibFileSearch
	when looking for glade files.

	* Makefile.am: add new files.

	* GAboutlyx.C (doBuild):
	* GMathDelim.C (doBuild):
	* GMathPanel.C (doBuild):
	* GPrint.C (doBuild):
	* GTableCreate.C (doBuild):
	* GText.C (doBuild):
	* GUrl.C (doBuild): use findGladeFile in preference to LibFileSearch.
	Prevents crash when using a not-installed lyx executable.

2004-04-20  Angus Leeming  <leeming@lyx.org>

	* Makefile.am (SUBDIRS): add gimages.

	* gimages/.cvsignore: new file. Ignore Makefile.in, Makefile.

	* gimages/Makefile.am: new file. Add the xpm files to EXTRA_DIST.

	* glade/Makefile.am (GLADE_FILES): replace '*.glade' with the