@@ -187,6 +187,7 @@ src/output_plaintext.C
 src/paragraph.C
 src/rowpainter.C
 src/support/globbing.C
+src/support/path_defines.C
 src/tex2lyx/lengthcommon.C
 src/text.C
 src/text2.C
